Fix strong letters on <ul>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </nav>
             </div>
             -->
-            
+
             <div id="introduction_wrapper">
                 <div class="introduction_title">
                     <h1>Welcome</h1>
@@ -50,9 +50,9 @@
                         <h3 style="text-align: center; color: lightseagreen; font-size: 25px;" >Info</h3>
                         <div class="info_container">
                             <ul>
-                                <li><span class="bold">Name: </span>Rhayser Montoya</li>
-                               <li><span class="bold">Age: </span>25</li>
-                               <li><span class="bold">From: </span>Caracas-Venezuela</li>
+                                <li><strong>Name: </strong>Rhayser Montoya</li>
+                               <li><strong>Age: </strong>25</li>
+                               <li><strong>From: </strong>Caracas-Venezuela</li>
                                <li><span class="bold">Languages: </span>
                                    <ol>
                                         <li>Spanish (native)</li>
