--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <h3 style="text-align: center;">Add images:</h3>
                             <img src="picture1.jpg" alt="Photo about me" width="300px" height="200px" style="border-radius: 5px;">
                             <img src="picture2.jpg" alt="Photo about me" width="300px" height="200px" style="border-radius: 5px;">
-                            <img src="picture3.jpg" alt="Photo with my girlfriend" width="200px" height="200px" style="border-radius: 5px;"
+                            <img src="picture3.jpg" alt="Photo with my girlfriend" width="200px" height="200px" style="border-radius: 5px;">
                         </div>
                     </div>
                 </div>
