Add links to images, create 3 more .hml

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 
                 <!-- Centered Profile Image -->
                 <div class="about_details">
-                        <img class="picture" src="Profile.jpg" width="260px" height="260px" style="border-radius: 50%;">
+                        <img class="picture" src="Profile.jpg" width="260px" height="260px" style="border-radius: 50%; border: 1px solid lightseagreen;">
                 </div>
 
 
@@ -62,7 +62,7 @@
                 <!-- Info Container -->
                 <div class="about_details">
                         <h3 style="text-align: center; color: lightseagreen; font-size: 25px;" >Info</h3>
-                        <div class="info_container">
+                        <div class="info_container" id="here">
                             <ul>
                                 <li><strong>Name: </strong>Rhayser Montoya</li>
                                <li><strong>Age: </strong>25</li>
@@ -91,7 +91,7 @@
                 <div class="learned_container">
                     <div class="learned_details">
                         <div class="table_container">
-                            <h3 style="text-align: center;">Tables: </h3>
+                            <h3 style="text-align: center; border-bottom: 1px solid lightseagreen;">Tables: </h3>
                             <table>
                                 <thead>
                                     <tr>
@@ -121,14 +121,14 @@
                     <!-- 2- List Container -->           
                     <div class="learned_details">
                         <div class="list_container">
-                            <h3 style="text-align: center;"> Lists: </h3>
-                            <h5> I can also make unordered lists (As I did above): <a href="#about_wrapper"><strong>here</strong></a></h5>
+                            <h3 style="text-align: center; border-bottom: 1px solid lightseagreen;"> Lists: </h3>
+                            <h4> I can also make unordered lists (As I did above in the info part): <a href="#here" style="color: aquamarine;"><strong>here</strong></a></h5>
                             <ul>
                                 <li>Item 1</li>
                                 <li>Item 2</li>
                                 <li>Item 3</li>
                             </ul>
-                            <h5> There's another type of lists around, wich are called ordered lists: </h5>
+                            <h4> There's another type of lists around, wich are called ordered lists: </h5>
                             <ol>
                                 <li>Item 1</li>
                                 <li>Item 2</li>
@@ -140,10 +140,11 @@
                     <!-- 3- Pictures Container -->
                     <div class="learned_details centered_box">
                         <div class="pictures_container">
-                            <h3 style="text-align: center;">Add images:</h3>
-                            <img src="picture1.jpg" alt="Photo about me" width="300px" height="200px" style="border-radius: 5px;">
-                            <img src="picture2.jpg" alt="Photo about me" width="300px" height="200px" style="border-radius: 5px;">
-                            <img src="picture3.jpg" alt="Photo with my girlfriend" width="200px" height="200px" style="border-radius: 5px;">
+                            <h3 style="text-align: center; border-bottom: 1px solid lightseagreen;">Add images:</h3>
+                            <p class="Computer" style="text-align: center;"> (Click on them to expand) </p>
+                            <a href="index1.html"><img src="picture1.jpg" alt="Photo about me" width="300px" height="200px" style="border-radius: 5px;"></a>
+                            <a href="index2.html"><img src="picture2.jpg" alt="Photo about me" width="300px" height="200px" style="border-radius: 5px;"></a>
+                            <a href="index3.html"><img src="picture3.jpg" alt="Photo with my girlfriend" width="200px" height="200px" style="border-radius: 5px;"></a>
                         </div>
                     </div>
                 </div>
