Add footer, add responsiveness to images .html's
Add some Google fonts, style footer, finish the first sketch.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="index.css" type="text/css">
         <link rel="icon" type="image/png" sizes="180x180" href="icon2.png">
+
+        <!-- Fonts-->
+        <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@100&family=Raleway:wght@100;300&family=Roboto&display=swap" rel="stylesheet">
         <title>My web page</title>
     </head>
     <body>
@@ -45,7 +48,7 @@
                         <h3 style="text-align: center; color: lightseagreen; font-size: 25px;">About Me</h3>
                     <div class="about_details_wrapper">
                         <p style="font-size: 20px;">I'm currently trying to learn Web development from scratch to 
-                            become a professional on this area, right now I'm learning this topic through HarvardX.
+                            become a professional in this area, right now I'm learning this topic through HarvardX.
                         </p>
                     </div>
                 </div>
@@ -54,7 +57,7 @@
                 
                 <!-- Centered Profile Image -->
                 <div class="about_details">
-                        <img class="picture" src="Profile.jpg" width="260px" height="260px" style="border-radius: 50%; border: 1px solid lightseagreen;">
+                        <img class="picture" src="Profile.jpg" width="260px" height="260px" style="border-radius: 50%; border: 1px solid lightseagreen; align-self: center;">
                 </div>
 
 
@@ -91,7 +94,7 @@
                 <div class="learned_container">
                     <div class="learned_details">
                         <div class="table_container">
-                            <h3 style="text-align: center; border-bottom: 1px solid lightseagreen;">Tables: </h3>
+                            <h3 style="text-align: center; border-bottom: 1px solid lightseagreen;">Tables</h3>
                             <table>
                                 <thead>
                                     <tr>
@@ -121,7 +124,7 @@
                     <!-- 2- List Container -->           
                     <div class="learned_details">
                         <div class="list_container">
-                            <h3 style="text-align: center; border-bottom: 1px solid lightseagreen;"> Lists: </h3>
+                            <h3 style="text-align: center; border-bottom: 1px solid lightseagreen;"> Lists</h3>
                             <h4> I can also make unordered lists (As I did above in the info part): <a href="#here" style="color: aquamarine;"><strong>here</strong></a></h5>
                             <ul>
                                 <li>Item 1</li>
@@ -140,7 +143,7 @@
                     <!-- 3- Pictures Container -->
                     <div class="learned_details centered_box">
                         <div class="pictures_container">
-                            <h3 style="text-align: center; border-bottom: 1px solid lightseagreen;">Add images:</h3>
+                            <h3 style="text-align: center; border-bottom: 1px solid lightseagreen;">Add images</h3>
                             <p class="Computer" style="text-align: center;"> (Click on them to expand) </p>
                             <a href="index1.html"><img src="picture1.jpg" alt="Photo about me" width="300px" height="200px" style="border-radius: 5px;"></a>
                             <a href="index2.html"><img src="picture2.jpg" alt="Photo about me" width="300px" height="200px" style="border-radius: 5px;"></a>
@@ -152,12 +155,22 @@
         </div>
 
         <footer>
-            <div class="social">
-                <a href="https://www.facebook.com/rhayser"><i class="fab fa-facebook-square"></i></a>
-                <a href="https://www.instagram.com/rhayserm/"><i class="fab fa-instagram"></i></a>
-                <a href=""><i class="fab fa-youtube"></i></a>
+            <div id="footer_wrapper">
+                <div class="footer_title">
+                    <h2 style="text-align: center;">Contact</h2>
+                    <p style="text-align: center; color: #ffffff; border-bottom: 1px solid lightseagreen; padding-bottom: 25px;">For any advice or suggestion</p>
+                </div>
+
+                <div class="social">
+                    <a href="https://www.facebook.com/rhayser" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a>
+                    <a href="https://www.instagram.com/rhayserm/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a>
+                    <a href="https://www.youtube.com/channel/UCgTfEvkqPPCjl_oJAx7MS3g?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i> Youtube</a>
+                </div>
+                <div class="copyright">
+                    <small style="margin-bottom: 300px;">&copy; Copyright 2020, Rhayser Montoya</small>
+                </div>
             </div>
-            <small>&copy; Copyright 2020, Rhayser Montoya</small>
+            
         </footer>
         <script src="https://kit.fontawesome.com/7c47824389.js" crossorigin="anonymous"></script>
     </body>
